build: moving project to a public repository
Turn the project made in Trybe visible in my own repository

--- a/src/css/Foods.css
+++ b/src/css/Foods.css
@@ -1,13 +1,12 @@
-@media screen and ( max-width : 640px ) {
-
-  .card-foods {
+.card-foods {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat( 2, 1fr);
     grid-template-rows: 100px;
+    margin-left: 120px;
+    width: 400px;
+    justify-content: space-between;
   }
 
   .food-page {
     height: 80%;
-    overflow: auto;
   }
-}
