--- a/src/css/Drinks.css
+++ b/src/css/Drinks.css
@@ -1,13 +1,17 @@
-@media screen and ( max-width : 640px ) {
+.card-drinks {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 100px;
+  margin-left: 140px;
+  width: 400px;
 
-  .card-drinks {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 100px;
-  }
+}
 
-  .drink-page {
-    height: 80%;
-    overflow: auto;
-  }
+div::-webkit-scrollbar {
+  display: none;
+}
+
+.drink-page {
+  height: 80%;
+  overflow: auto;
 }
